feat: enhance accessible_tenants attribute serialization in EnhancedTenantServiceImpl for improved tenant management